Update: Dockerfile_example.txt

--- a/docker/Dockerfile_example.txt
+++ b/docker/Dockerfile_example.txt
@@ -39,8 +39,23 @@ ARG キー1(変数名)=デフォルト値(初期値)
 --build-arg 変数名=値 とするとDockerfileに記述していなくても
 コンテナ実行時に表示されるようになる
 
-
 Dockerfileに記載する
 イメージ作成時のみに利用する一時的な変数を渡す
 Dockerfileの中で使える変数を渡すことができる
 bashに入って echo $変数名 で確認しても中身は何もない
+
+
+
+ENV(エンブ)について
+
+ENV キー１(環境変数名)=値１(環境変数の値) キー2(環境変数名)=値2(環境変数の値)
+[例]　ENV hello="Hello World"
+    ENV hoge=HOGEHOGE
+     ※””をつけるのはスペースがある値で、どこまでが文字列か判断するため
+　　　　     スペースがないなら””はつけなくていい
+
+Dockerfileに記載する
+環境変数の設定をするための記述
+イメージ作成時とコンテナ実行時の両方で有効な変数
+１度に複数個の環境変数を設定することができる
+bashに入ったら echo $キー1（環境変数名）　で環境変数の値を呼び出すことができる
