Update: Dockerfile_example.txt

--- a/docker/Dockerfile_example.txt
+++ b/docker/Dockerfile_example.txt
@@ -59,3 +59,15 @@ Dockerfileに記載する
 イメージ作成時とコンテナ実行時の両方で有効な変数
 １度に複数個の環境変数を設定することができる
 bashに入ったら echo $キー1（環境変数名）　で環境変数の値を呼び出すことができる
+
+
+
+CMD(コマンド)について
+
+CMD ["実行ファイル", "パラメーター１", "ぱらめーたー２"]
+[例] CMD ["ls", "-a"]
+
+Dockerfileに記載する
+コンテナ実行時のデフォルトコマンドを設定する
+Dockerfileで１度しか使えない
+複数のCMDがあれば最後のCMDのみが有効
